@@ -1,3 +1,7 @@
+2014-08-06  Tom Tromey  <tromey@redhat.com>
+
+	* dbxread.c (end_psymtab): Remove dead code.
+
 2014-08-06  Yao Qi  <yao@codesourcery.com>
 
 	* amd64-linux-nat.c: Remove duplicated include
